# Nodo

./: .dockerignore  .gitignore  Dockerfile  JAVA_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  SINGLE_WORKER_DEPLOYMENT.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  run.ps1
.github/workflows/: ci.yml
coordinator/: __init__.py  config.py  health.py  leadership.py  main.py  runtime.py  state_store.py
deploy/: haproxy.cfg  prometheus.yml
docs/: README.md  guia_componentes.tex  routes.json  worker_ieee_report.tex
docs/demo/: README.md  demo-run.txt  (+2 more)
examples/: README.md  compare_workers_batch.py  imagenode_client.py  load_submitter.py  mock_app_server.py  mock_coordinator.py  send_real_image.py  submit_task.py
orchestrator/: go.mod  go.sum
proto/: __init__.py  buf.gen.yaml  imagenode.proto  imagenode_pb2.py  imagenode_pb2_grpc.py  orchestrator.proto  orchestrator_pb2.py  orchestrator_pb2_grpc.py  worker_node.proto  worker_node_pb2.py  worker_node_pb2_grpc.py
scripts/: README.md  demo_end_to_end.py  deploy-worker.sh  generate_dev_security_assets.py  healthcheck.py
src/: Dockerfile  a2ws.proto  docker-compose.yml  main.py  requirements.txt  worker_node.py
tests/: test_config.py  test_coordinator_integration.py  test_coordinator_runtime.py  test_cost_model.py  test_durability.py  test_image_processor.py  test_imagenode_service.py  test_ipc_pipeline.py  test_priority_queue.py  test_state_store.py  test_worker_integration.py
worker/: ARCHITECTURE.md  __init__.py  __main__.py  config.py  main.py  server.py  worker.py
(+91 files in other folders)
